--- a/prohibition2.html
+++ b/prohibition2.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>The Prohibition era</title>
+        <title>Prohibition</title>
         <link href="resetcopy.css" rel="stylesheet">
         <link href="prohibition2.css" rel="stylesheet">
         <link href="homep.css" rel="stylesheet">
