replaced index.html

--- a/mediaprohibition.html
+++ b/mediaprohibition.html
@@ -16,8 +16,8 @@
            <h1 class="themedia"> THE </h1>
            
            <div class="titletablet mediamaint">
-           <h1 class="stroke mediamaint"> <a href="prohibition2.html">PROHIBITION </a> </h1>
-           <h1><a href="prohibition2.html"> ERA </a> </h1>
+           <h1 class="stroke mediamaint"> <a href="index.html">PROHIBITION </a> </h1>
+           <h1><a href="index.html"> ERA </a> </h1>
         </div>
         </div>
            <span class="mediaarrow">&#8681;</span>
